# event-agent

./: .dockerignore  .env.example  Dockerfile  README.md  agent.py  api.py  discoverer.py  docker-compose.yml  evaluator.py  pyproject.toml  schemas.py  tools.py
.claude/: settings.local.json
.github/workflows/: deploy.yml
searxng/: settings.yml
